deploy/k8s/base/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/name: go-order-service
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: go-order-service
spec:
  selector:
    app.kubernetes.io/name: go-order-service
    app.kubernetes.io/component: api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
